--- a/frontend/src/app/auth/user-manager/user-manager.component.html
+++ b/frontend/src/app/auth/user-manager/user-manager.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <igx-grid #grid [data]="users | async" width="100%" height="700px" [rowEditable]="true" [primaryKey]="'id'"
+  <igx-grid #grid [data]="users | async" width="100%" height="100%" [rowEditable]="true" [primaryKey]="'id'"
     (rowAdded)="userAdded($event)" (rowEditDone)="userEdited($event)">
     <igx-grid-toolbar>
       <igx-grid-toolbar-actions>
