--- a/frontend/src/app/auth/user-settings/user-settings.component.scss
+++ b/frontend/src/app/auth/user-settings/user-settings.component.scss
@@ -1,6 +1,6 @@
 .container {
   max-width: 100%;
-  height: 700px;
+  height: 100%;
   background-color: hsla(var(--ig-surface-500));
   padding: 2rem;
 }
