--- a/frontend/src/app/moderator/references/references.component.html
+++ b/frontend/src/app/moderator/references/references.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <igx-grid #grid [data]="data" [width]="'100%'" [height]="'700px'">
+    <igx-grid #grid [data]="data" [width]="'100%'" [height]="'100%'">
         <igx-grid-toolbar>
             <igx-grid-toolbar-actions>
                 <igx-grid-toolbar-exporter [exportExcel]="true" [exportCSV]="false"></igx-grid-toolbar-exporter>
