feat: limit visibility

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -13,33 +13,41 @@
   </button>
 </igx-navbar>
 <div class="main">
-  <igx-nav-drawer #navDrawer [isOpen]="userService.isLoggedIn()" class="nav-drawer" width="300px" [pin]="true" [pinThreshold]="0">
+  <igx-nav-drawer #navDrawer [isOpen]="userService.isLoggedIn()" class="nav-drawer" width="300px" [pin]="true"
+    [pinThreshold]="0">
     <ng-template igxDrawer>
-      <div igxDrawerItem igxRipple routerLink="/auth/user-manager" [active]="selected === 'user-manager'" (click)="selected = 'user-manager'">
+      <div igxDrawerItem igxRipple routerLink="/auth/user-manager" [active]="selected === 'user-manager'"
+        (click)="selected = 'user-manager'" *ngIf="userService.isAdmin()">
         <igx-icon class="icon">admin_panel_settings</igx-icon>
         <span>Администрация</span>
       </div>
-      <div igxDrawerItem igxRipple routerLink="/auth/user-settings" [active]="selected === 'settings'" (click)="selected = 'settings'">
+      <div igxDrawerItem igxRipple routerLink="/auth/user-settings" [active]="selected === 'settings'"
+        (click)="selected = 'settings'">
         <igx-icon class="icon">settings</igx-icon>
         <span>Настройки на профила</span>
       </div>
-      <div igxDrawerItem igxRipple routerLink="/moderator/people" [active]="selected === 'people'" (click)="selected = 'people'">
+      <div igxDrawerItem igxRipple routerLink="/moderator/people" [active]="selected === 'people'"
+        (click)="selected = 'people'" *ngIf="userService.isModerator() || userService.isAdmin()">
         <igx-icon class="icon">group</igx-icon>
         <span>Хора</span>
       </div>
-      <div igxDrawerItem igxRipple routerLink="/moderator/cars" [active]="selected === 'cars'" (click)="selected = 'cars'">
+      <div igxDrawerItem igxRipple routerLink="/moderator/cars" [active]="selected === 'cars'"
+        (click)="selected = 'cars'" *ngIf="userService.isModerator() || userService.isAdmin()">
         <igx-icon class="icon">directions_car</igx-icon>
         <span>Коли</span>
       </div>
-      <div igxDrawerItem igxRipple routerLink="/moderator/pets" [active]="selected === 'pets'" (click)="selected = 'pets'">
+      <div igxDrawerItem igxRipple routerLink="/moderator/pets" [active]="selected === 'pets'"
+        (click)="selected = 'pets'" *ngIf="userService.isModerator() || userService.isAdmin()">
         <igx-icon class="icon">pets</igx-icon>
         <span>Животни</span>
       </div>
-      <div igxDrawerItem igxRipple routerLink="/moderator/properties" [active]="selected === 'properties'" (click)="selected = 'properties'">
+      <div igxDrawerItem igxRipple routerLink="/moderator/properties" [active]="selected === 'properties'"
+        (click)="selected = 'properties'" *ngIf="userService.isModerator() || userService.isAdmin()">
         <igx-icon class="icon">apartment</igx-icon>
         <span>Имоти</span>
       </div>
-      <div igxDrawerItem igxRipple routerLink="/moderator/references" [active]="selected === 'references'" (click)="selected = 'references'">
+      <div igxDrawerItem igxRipple routerLink="/moderator/references" [active]="selected === 'references'"
+        (click)="selected = 'references'">
         <igx-icon class="icon">library_books</igx-icon>
         <span>Справки</span>
       </div>
