--- a/frontend/src/app/moderator/references/references.component.html
+++ b/frontend/src/app/moderator/references/references.component.html
@@ -1,14 +1,39 @@
-<div class="container">
-    <igx-grid #grid [data]="data" [width]="'100%'" [height]="'100%'">
-        <igx-grid-toolbar>
-            <igx-grid-toolbar-actions>
-                <igx-grid-toolbar-exporter [exportExcel]="true" [exportCSV]="false"></igx-grid-toolbar-exporter>
-            </igx-grid-toolbar-actions>
-        </igx-grid-toolbar>
-        <igx-column field="property" header="Обект" [sortable]="true" [resizable]="true"></igx-column>
-        <igx-column field="name" header="Ползвател" [sortable]="true" [resizable]="true"></igx-column>
-        <igx-column field="type" header="Вид ползвател" [sortable]="true" [resizable]="true"></igx-column>
-        <igx-column field="phone" header="тел." [sortable]="true" [resizable]="true"></igx-column>
-        <igx-column field="mail" header="e-mail" [sortable]="true" [resizable]="true"></igx-column>
-    </igx-grid>
-</div>
+<igx-tabs class="container">
+    <igx-tab-item>
+        <igx-tab-header>
+            <igx-icon igxTabHeaderIcon>contacts</igx-icon>
+            <span igxTabHeaderLabel>Контакти</span>
+        </igx-tab-header>
+        <igx-tab-content>
+            <igx-grid #peopleGrid [data]="people" [width]="'100%'" [height]="'100%'">
+                <igx-grid-toolbar>
+                    <igx-grid-toolbar-actions>
+                        <igx-grid-toolbar-exporter [exportExcel]="true" [exportCSV]="false"></igx-grid-toolbar-exporter>
+                    </igx-grid-toolbar-actions>
+                </igx-grid-toolbar>
+                <igx-column field="property" header="Обект" [sortable]="true" [resizable]="true"></igx-column>
+                <igx-column field="name" header="Ползвател" [sortable]="true" [resizable]="true"></igx-column>
+                <igx-column field="type" header="Вид ползвател" [sortable]="true" [resizable]="true"></igx-column>
+                <igx-column field="phone" header="тел." [sortable]="true" [resizable]="true"></igx-column>
+                <igx-column field="mail" header="e-mail" [sortable]="true" [resizable]="true"></igx-column>
+            </igx-grid>
+        </igx-tab-content>
+    </igx-tab-item>
+    <igx-tab-item>
+        <igx-tab-header>
+            <igx-icon igxTabHeaderIcon>directions_car</igx-icon>
+            <span igxTabHeaderLabel>Коли</span>
+        </igx-tab-header>
+        <igx-tab-content>
+            <igx-grid #carsGrid [data]="cars" [width]="'100%'" [height]="'100%'">
+                <igx-grid-toolbar>
+                    <igx-grid-toolbar-actions>
+                        <igx-grid-toolbar-exporter [exportExcel]="true" [exportCSV]="false"></igx-grid-toolbar-exporter>
+                    </igx-grid-toolbar-actions>
+                </igx-grid-toolbar>
+                <igx-column field="property" header="Обект" [sortable]="true" [resizable]="true"></igx-column>
+                <igx-column field="car" header="Кола" [sortable]="true" [resizable]="true"></igx-column>
+            </igx-grid>
+        </igx-tab-content>
+    </igx-tab-item>
+</igx-tabs>
