--- a/frontend/src/app/moderator/property/property.component.scss
+++ b/frontend/src/app/moderator/property/property.component.scss
@@ -1,6 +1,16 @@
 .container {
-    max-width: 1140px;
-    height: 100%;
-    overflow: auto;
-    background-color: hsla(var(--ig-surface-500));
-  }
+  max-width: 1140px;
+  height: 100%;
+  overflow: auto;
+  background-color: hsla(var(--ig-surface-500));
+}
+
+.detail-container {
+  width: 100%;
+  height: 300px;
+}
+
+.tab-content {
+  width: 100%;
+  height: 300px;
+}
