--- a/frontend/src/app/moderator/people/people.component.html
+++ b/frontend/src/app/moderator/people/people.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <igx-grid #grid [data]="people | async" width="100%" height="100%" [rowEditable]="true" [primaryKey]="'id'"
-    (rowAdded)="personAdded($event)" (rowEditDone)="personEdited($event)" [sortingOptions]="sortingOptions">
+    (rowAdded)="personAdded($event)" (rowEditDone)="personEdited($event)" [sortingOptions]="sortingOptions" [sortStrategy]="sortStrategy">
     <igx-grid-toolbar>
       <igx-grid-toolbar-actions>
         <button igxButton (click)="addPerson(grid)">Добави човек</button>
@@ -18,7 +18,7 @@
     <igx-column field="email" header="e-mail" [sortable]="true" [resizable]="true"></igx-column>
     <igx-column field="birthDate" header="Роден на" [sortable]="true" [dataType]="'date'" [resizable]="true"></igx-column>
     <igx-column field="hasChip" header="Чип" [dataType]="'boolean'" [width]="'80px'"></igx-column>
-    <igx-column field="email" header="Имоти" [editable]="false" [resizable]="true">
+    <igx-column field="descriptors" header="Имоти" [sortable]="true" [editable]="false" [resizable]="true">
       <ng-template igxCell let-cell="cell">
         {{ renderProperties(cell) }}
       </ng-template>
