--- a/frontend/src/app/moderator/people/people.component.html
+++ b/frontend/src/app/moderator/people/people.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <igx-grid #grid [data]="people | async" width="100%" height="100%" [rowEditable]="true" [primaryKey]="'id'"
-    (rowAdded)="personAdded($event)" (rowEditDone)="personEdited($event)" [sortingOptions]="sortingOptions" [sortStrategy]="sortStrategy">
+    (rowAdded)="personAdded($event)" (rowEditDone)="personEdited($event)" [sortingOptions]="sortingOptions"
+    [sortStrategy]="sortStrategy">
     <igx-grid-toolbar>
       <igx-grid-toolbar-actions>
         <button igxButton (click)="addPerson(grid)">Добави човек</button>
@@ -16,8 +17,13 @@
     <igx-column field="name" header="Име" [sortable]="true" [resizable]="true"></igx-column>
     <igx-column field="phone" header="Телефон" [sortable]="true" [resizable]="true"></igx-column>
     <igx-column field="email" header="e-mail" [sortable]="true" [resizable]="true"></igx-column>
-    <igx-column field="birthDate" header="Роден на" [sortable]="true" [dataType]="'date'" [resizable]="true"></igx-column>
-    <igx-column field="hasChip" header="Чип" [dataType]="'boolean'" [width]="'80px'"></igx-column>
+    <igx-column field="birthDate" header="Роден на" [sortable]="true" [dataType]="'date'"
+      [resizable]="true"></igx-column>
+    <igx-column field="chips" [dataType]="'boolean'" [width]="'120px'" [editable]="false" [headerTemplate]="chipsHeader">
+      <ng-template igxCell let-cell="cell">
+        {{ renderChips(cell) }}
+      </ng-template>
+    </igx-column>
     <igx-column field="descriptors" header="Имоти" [sortable]="true" [editable]="false" [resizable]="true">
       <ng-template igxCell let-cell="cell">
         {{ renderProperties(cell) }}
@@ -26,3 +32,9 @@
   </igx-grid>
 </div>
 <igx-dialog #dialog><app-delete #deleteDialog></app-delete></igx-dialog>
+<ng-template #chipsHeader>
+  <span class="igx-grid-th__title">
+    <div style="line-height: initial;"><span style="line-height: 25px;" title="Чип">Чип</span></div>
+    <div style="line-height: initial;"><span style="line-height: 25px;" title="Чип">вкл./изкл.</span></div>
+  </span>
+</ng-template>
