--- a/frontend/src/app/moderator/people/people.component.html
+++ b/frontend/src/app/moderator/people/people.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <igx-grid #grid [data]="people | async" [rowEditable]="true" [primaryKey]="'id'" (rowAdded)="personAdded($event)"
-    (rowEditDone)="personEdited($event)" [sortingOptions]="sortingOptions" [sortStrategy]="sortStrategy">
+    igxGridState (rowEditDone)="personEdited($event)" [sortingOptions]="sortingOptions" [sortStrategy]="sortStrategy">
     <igx-grid-toolbar>
       <igx-grid-toolbar-actions>
         <button igxButton (click)="addPerson(grid)">Добави човек</button>
