--- a/frontend/src/app/moderator/car/car.component.html
+++ b/frontend/src/app/moderator/car/car.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <igx-grid #grid [data]="cars | async" [rowEditable]="true" [primaryKey]="'id'" (rowAdded)="carAdded($event)"
-    (rowEditDone)="carEdited($event)" [sortingOptions]="sortingOptions">
+    igxGridState (rowEditDone)="carEdited($event)" [sortingOptions]="sortingOptions">
     <igx-grid-toolbar>
       <igx-grid-toolbar-actions>
         <button igxButton (click)="addCar(grid)">Добави кола</button>
