--- a/frontend/src/app/moderator/chips/chips.component.html
+++ b/frontend/src/app/moderator/chips/chips.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <igx-grid #grid [data]="chips | async" [rowEditable]="true" [primaryKey]="'id'" (rowAdded)="chipAdded($event)"
-    (rowEditDone)="chipEdited($event)" [sortingOptions]="sortingOptions" [sortStrategy]="sortStrategy">
+    igxGridState (rowEditDone)="chipEdited($event)" [sortingOptions]="sortingOptions" [sortStrategy]="sortStrategy">
     <igx-grid-toolbar>
       <igx-grid-toolbar-actions>
         <button igxButton (click)="addChip(grid)">Добави чип</button>
